<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/primaryColor"
            app:expandedTitleMarginEnd="30dp"
            app:statusBarScrim="@color/primaryColor"
            app:expandedTitleMarginStart="20dp"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/iv_sobre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:transitionName="element1"
                app:actualImageScaleType="centerCrop"
                app:failureImage="@drawable/error_img"
                app:layout_collapseMode="parallax"
                app:placeholderImage="@drawable/loading_img"
                app:retryImage="@drawable/retry_img" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/tb_main"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                android:minHeight="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/NestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="0dp"
        android:layout_marginBottom="30dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/rl_segundario"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/conteudo_sobrenos"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/conteudo_sobrenos"
                android:textSize="@dimen/text_conteudo" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/sub_sobrenos_2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/conteudo_sobrenos"
                android:paddingTop="@dimen/text_subtitulo"
                android:text="@string/sub_sobrenos_2"
                android:textColor="@color/primaryColor"
                android:textSize="@dimen/text_subtitulo" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/conteudo_sobrenos_2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sub_sobrenos_2"
                android:text="@string/conteudo_sobrenos_2"
                android:textSize="@dimen/text_conteudo" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/sub_sobrenos_3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/conteudo_sobrenos_2"
                android:paddingTop="@dimen/text_subtitulo"
                android:text="@string/sub_sobrenos_3"
                android:textColor="@color/primaryColor"
                android:textSize="@dimen/text_subtitulo" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/conteudo_sobrenos_3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/sub_sobrenos_3"
                android:text="@string/conteudo_sobrenos_3"
                android:textSize="@dimen/text_conteudo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_below="@+id/conteudo_sobrenos_3">

            </LinearLayout>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>

